[gd_scene load_steps=6 format=3 uid="uid://cidlmjx8x3j6u"]

[ext_resource type="Script" uid="uid://c6rlvwu0cg7o7" path="res://scripts/ui/TeamList.gd" id="1_kck8o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cnkno"]
bg_color = Color(0.15, 0.15, 0.2, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_modal_bg"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.5, 0.5, 0.8, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_confirm"]
bg_color = Color(0.2, 0.8, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cancel"]
bg_color = Color(0.8, 0.2, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TeamList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kck8o")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0509804, 0.101961, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TopBar" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cnkno")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopBar"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "← 返回"

[node name="TitleLabel" type="Label" parent="VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "隊伍管理"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TeamListContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="CardSelectorModal" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(1200, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -400.0
offset_right = 600.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_modal_bg")

[node name="MarginContainer" type="MarginContainer" parent="CardSelectorModal"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CardSelectorModal/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderLabel" type="Label" parent="CardSelectorModal/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "編輯隊伍 (0/5)"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CardSelectorModal/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InventoryScroll" type="ScrollContainer" parent="CardSelectorModal/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardGridContainer" type="GridContainer" parent="CardSelectorModal/MarginContainer/VBoxContainer/InventoryScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 8

[node name="ButtonHBox" type="HBoxContainer" parent="CardSelectorModal/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ConfirmButton" type="Button" parent="CardSelectorModal/MarginContainer/VBoxContainer/ButtonHBox"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_confirm")
text = "確認"

[node name="CancelButton" type="Button" parent="CardSelectorModal/MarginContainer/VBoxContainer/ButtonHBox"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_cancel")
text = "取消"
