# scripts/ui/TeamList.gd
# éšŠä¼ç®¡ç†ä¸»æ§åˆ¶å™¨ (æ–°ç‰ˆ)
extends Control

# ==================== å¼•ç”¨ ====================
@onready var back_button = $VBoxContainer/TopBar/HBoxContainer/BackButton
@onready var team_list_container = $VBoxContainer/ScrollContainer/TeamListContainer

# --- æ–°å¢ï¼šæ‡¸æµ®è¦–çª— (Modal) çš„å¼•ç”¨ ---
@onready var card_selector_modal = $CardSelectorModal
@onready var modal_header_label = $CardSelectorModal/MarginContainer/VBoxContainer/HeaderLabel
@onready var modal_card_grid = $CardSelectorModal/MarginContainer/VBoxContainer/InventoryScroll/CardGridContainer
@onready var modal_confirm_button = $CardSelectorModal/MarginContainer/VBoxContainer/ButtonHBox/ConfirmButton
@onready var modal_cancel_button = $CardSelectorModal/MarginContainer/VBoxContainer/ButtonHBox/CancelButton

# ==================== é è£½é«” ====================
# æ›¿æ›æˆæ–°çš„ TeamRow å ´æ™¯
var team_row_scene = preload("res://scenes/team/TeamRow.tscn")
# æˆ‘å€‘é‚„éœ€è¦èƒŒåŒ…æ ¼å­çš„å ´æ™¯
var inventory_slot_scene = preload("res://scenes/inventory/InventorySlot.tscn")

# ==================== è³‡æ–™ ====================
const DEFAULT_TEAM_ROWS = 5
var current_editing_team_id: String = ""
var temp_team_card_ids: Array = []  # âœ… å„²å­˜ modal ä¸­è‡¨æ™‚é¸æ“‡çš„ instance_id
var is_selection_mode: bool = false

# ==================== åˆå§‹åŒ– ====================
func _ready():
	print("ğŸ‘¥ éšŠä¼ç®¡ç† (æ–°ç‰ˆ) è¼‰å…¥å®Œæˆ")
	
	# é€£æ¥æŒ‰éˆ•
	back_button.pressed.connect(_on_back_pressed)
	# æª¢æŸ¥æ˜¯å¦æ˜¯å¾é—œå¡é¸æ“‡ä»‹é¢ä¾†çš„
	if GameManager.selected_stage != null:
		is_selection_mode = true
		print("ğŸ“‹ TeamList é€²å…¥ã€Œé¸æ“‡æ¨¡å¼ã€")
	else:
		is_selection_mode = false
		print("ğŸ‘¥ TeamList é€²å…¥ã€Œç®¡ç†æ¨¡å¼ã€")
	
	# é€£æ¥ Modal æŒ‰éˆ•
	modal_confirm_button.pressed.connect(_on_modal_confirm_pressed)
	modal_cancel_button.pressed.connect(_on_modal_cancel_pressed)

	# è¼‰å…¥æ‰€æœ‰éšŠä¼
	create_team_rows()
	
	# éš±è— Modal
	card_selector_modal.hide()

# ==================== è¼‰å…¥éšŠä¼ ====================

func create_team_rows():
	"""å‰µå»º 5 å€‹é è¨­çš„éšŠä¼æ¬„ä½"""
	
	# 1. æ¸…ç©ºèˆŠçš„
	for child in team_list_container.get_children():
		child.queue_free()
	
	# 2. ç²å–æ‰€æœ‰å·²å„²å­˜çš„éšŠä¼è³‡æ–™
	var all_teams_data = PlayerDataManager.get_all_teams()

	# 3. å‰µå»º 5 å€‹æ¬„ä½
	for i in range(DEFAULT_TEAM_ROWS):
		var team_id = "team_%d" % (i + 1) # team_1, team_2, ...
		
		# å˜—è©¦å¾å·²å„²å­˜çš„è³‡æ–™ä¸­è¼‰å…¥
		var team_data: TeamData = null
		if all_teams_data.has(team_id):
			# PlayerDataManager.load_team() æœƒè¿”å›ä¸€å€‹ TeamData ç‰©ä»¶
			team_data = PlayerDataManager.load_team(team_id)
			
		var row = team_row_scene.instantiate()
		team_list_container.add_child(row)
		
		# è¨­å®šæ¬„ä½ (å³ä½¿ team_data æ˜¯ null ä¹Ÿæ²’é—œä¿‚)
		row.setup(team_id, team_data)
		var team_is_empty = (team_data == null or team_data.leader_card_id.is_empty())
		row.set_selection_mode(is_selection_mode, team_is_empty)
		row.battle_requested.connect(_on_battle_requested)
		
		# é€£æ¥ä¿¡è™Ÿ
		row.edit_requested.connect(_on_edit_requested)
		row.clear_requested.connect(_on_clear_requested)
		row.remove_member_requested.connect(_on_remove_member_requested)

# ==================== éšŠä¼æ“ä½œ (ç”± TeamRow è§¸ç™¼) ====================
func _on_battle_requested(team_id: String):
	"""ä¸€å€‹ TeamRow æŒ‰ä¸‹äº†ã€Œæˆ°é¬¥ã€æŒ‰éˆ•"""
	var team = PlayerDataManager.load_team(team_id)

	if team == null or team.leader_card_id.is_empty():
		push_error("é¸æ“‡äº†ç„¡æ•ˆçš„éšŠä¼ï¼ ID: %s" % team_id)
		return

	if GameManager.selected_stage == null:
		push_error("æ²’æœ‰é¸æ“‡é—œå¡ï¼ç„¡æ³•é–‹å§‹æˆ°é¬¥")
		return

	print("âš”ï¸ éšŠä¼ %s ç¢ºèªï¼é€²å…¥æˆ°é¬¥: %s" % [team_id, GameManager.selected_stage.stage_name])

	# ä½¿ç”¨ GameManager å„²å­˜çš„é—œå¡å’Œå‰›é¸æ“‡çš„éšŠä¼é–‹å§‹æˆ°é¬¥
	GameManager.goto_battle(team, GameManager.selected_stage)


func _on_edit_requested(team_id: String):
	"""(æ ¸å¿ƒ) ç•¶ä¸€å€‹æ¬„ä½çš„ã€Œç·¨è¼¯ã€æŒ‰éˆ•è¢«é»æ“Š"""
	print("é–‹å§‹ç·¨è¼¯éšŠä¼: %s" % team_id)
	current_editing_team_id = team_id
	
	# 1. è¼‰å…¥ç•¶å‰éšŠä¼è³‡æ–™ï¼Œå­˜å…¥æš«å­˜å€
	temp_team_card_ids.clear()
	var team_data = PlayerDataManager.load_team(team_id)
	if team_data:
		if not team_data.leader_card_id.is_empty():
			temp_team_card_ids.append(team_data.leader_card_id)
		temp_team_card_ids.append_array(team_data.member_card_ids)

	# 2. å¡«å……æ‡¸æµ®èƒŒåŒ…
	_populate_card_selector()
	
	# 3. é¡¯ç¤ºæ‡¸æµ®è¦–çª—
	card_selector_modal.show()

func _on_clear_requested(team_id: String):
	"""ç•¶ä¸€å€‹æ¬„ä½çš„ã€Œæ¸…ç©ºã€æŒ‰éˆ•è¢«é»æ“Š"""
	# TODO: å¯ä»¥åœ¨é€™è£¡åŠ ä¸€å€‹ç¢ºèªå°è©±æ¡†

	# 1. å‘¼å« PlayerDataManager æ¸…é™¤
	PlayerDataManager.clear_team(team_id)

	# 2. ä¿å­˜è®Šæ›´
	PlayerDataManager.save_data()

	# 3. åˆ·æ–°åˆ—è¡¨
	create_team_rows()

func _on_remove_member_requested(team_id: String, slot_index: int):
	"""ç•¶é»æ“ŠæŸå€‹æ ¼å­çš„ç§»é™¤æŒ‰éˆ•"""
	print("ğŸ—‘ï¸ è™•ç†ç§»é™¤è«‹æ±‚ï¼šéšŠä¼ %sï¼Œæ ¼å­ %d" % [team_id, slot_index])

	# 1. è¼‰å…¥ç•¶å‰éšŠä¼è³‡æ–™
	var team_data = PlayerDataManager.load_team(team_id)
	if not team_data:
		print("âŒ éšŠä¼è³‡æ–™ä¸å­˜åœ¨ï¼š%s" % team_id)
		return

	# 2. æ ¹æ“š slot_index ç§»é™¤å°æ‡‰çš„å¡ç‰‡
	if slot_index == 0:
		# ç§»é™¤éšŠé•· (L1)
		print("  ç§»é™¤éšŠé•·ï¼š%s" % team_data.leader_card_id)

		# å¦‚æœæœ‰éšŠå“¡ï¼Œå°‡ç¬¬ä¸€å€‹éšŠå“¡å‡ç‚ºéšŠé•·
		if team_data.member_card_ids.size() > 0:
			team_data.leader_card_id = team_data.member_card_ids[0]
			team_data.member_card_ids.remove_at(0)
			print("  å‡ç´šéšŠå“¡ç‚ºæ–°éšŠé•·ï¼š%s" % team_data.leader_card_id)
		else:
			# å¦‚æœæ²’æœ‰éšŠå“¡ï¼Œæ¸…ç©ºæ•´å€‹éšŠä¼
			print("  éšŠä¼å·²ç©ºï¼Œæ¸…ç©ºæ•´å€‹éšŠä¼")
			PlayerDataManager.clear_team(team_id)
			PlayerDataManager.save_data()
			create_team_rows()
			return
	else:
		# ç§»é™¤éšŠå“¡ (A1 ~ A4)
		var member_index = slot_index - 1
		if member_index < team_data.member_card_ids.size():
			var removed_card = team_data.member_card_ids[member_index]
			print("  ç§»é™¤éšŠå“¡ï¼š%s (ç´¢å¼• %d)" % [removed_card, member_index])
			team_data.member_card_ids.remove_at(member_index)
		else:
			print("âŒ ç„¡æ•ˆçš„éšŠå“¡ç´¢å¼•ï¼š%d" % member_index)
			return

	# 3. ä¿å­˜æ›´æ–°å¾Œçš„éšŠä¼
	PlayerDataManager.save_team(team_id, team_data)
	PlayerDataManager.save_data()

	# 4. åˆ·æ–°é¡¯ç¤º
	create_team_rows()
	print("âœ… ç§»é™¤æˆåŠŸ")

# ==================== æ‡¸æµ®èƒŒåŒ… (Modal) é‚è¼¯ ====================

func _populate_card_selector():
	"""å¡«å……æ‡¸æµ®èƒŒåŒ…çš„å¡ç‰‡åˆ—è¡¨"""

	# 1. æ›´æ–°æ¨™é¡Œ
	modal_header_label.text = "ç·¨è¼¯éšŠä¼ %s (%d/%d)" % [
		current_editing_team_id.replace("team_", ""),
		temp_team_card_ids.size(),
		Constants.MAX_TEAM_SIZE
	]

	# 2. æ¸…ç©ºæ ¼å­
	for child in modal_card_grid.get_children():
		child.queue_free()

	# 3. âœ… ç²å–ç©å®¶æ‰€æœ‰å¡ç‰‡ï¼ˆç¾åœ¨è¿”å› instance_id åˆ—è¡¨ï¼‰
	var all_inventory_instances = PlayerDataManager.get_inventory()

	# 4. å‰µå»ºæ ¼å­
	for instance_id in all_inventory_instances:
		var slot = inventory_slot_scene.instantiate()
		modal_card_grid.add_child(slot)
		slot.setup(instance_id)  # âœ… å‚³é instance_id

		# 5. é€£æ¥é»æ“Šä¿¡è™Ÿ
		# âœ… ä½¿ç”¨ lambda æ•ç² instance_id
		slot.slot_clicked.connect(func(_signal_instance_id, _signal_pos):
			_on_modal_card_clicked(instance_id, slot)
		)

		# 6. æ¨™è¨˜å·²é¸ä¸­çš„å¡ç‰‡ï¼ˆâœ… çœŸæ­£æ”¯æ´é‡è¤‡è§’è‰²ï¼ï¼‰
		var count = temp_team_card_ids.count(instance_id)
		if count == 0:
			slot.modulate = Color(1.0, 1.0, 1.0)  # æ­£å¸¸
		elif count == 1:
			slot.modulate = Color(0.7, 0.7, 0.7)  # ç¨æš—
		else:
			slot.modulate = Color(0.4, 0.4, 0.4)  # å¾ˆæš—ï¼ˆå¤šå¼µï¼‰

func _on_modal_card_clicked(instance_id: String, slot_node: Control):
	"""åœ¨æ‡¸æµ®èƒŒåŒ…ä¸­é»æ“Šäº†ä¸€å¼µå¡ç‰‡ï¼ˆæ¥æ”¶ instance_idï¼‰"""

	# âœ… çœŸæ­£æ”¯æ´é‡è¤‡è§’è‰²ï¼
	# è¨ˆç®—é€™å¼µå¡ç‰‡å¯¦ä¾‹åœ¨éšŠä¼ä¸­å‡ºç¾çš„æ¬¡æ•¸
	var count_in_team = temp_team_card_ids.count(instance_id)

	var card_id = PlayerDataManager.get_card_id_from_instance(instance_id)

	if count_in_team > 0:
		# å¦‚æœå·²ç¶“æœ‰é€™å¼µå¯¦ä¾‹ -> ç§»é™¤å®ƒ
		temp_team_card_ids.erase(instance_id)  # åªç§»é™¤ç¬¬ä¸€å€‹åŒ¹é…çš„
		print("å¾éšŠä¼ä¸­ç§»é™¤ %s (instance_%s, å‰©é¤˜ %d å¼µ)" % [card_id, instance_id, count_in_team - 1])
	else:
		# å¦‚æœæ²’æœ‰é€™å¼µå¯¦ä¾‹ -> åŠ å…¥é¸æ“‡
		if temp_team_card_ids.size() < Constants.MAX_TEAM_SIZE:
			temp_team_card_ids.append(instance_id)
			print("æ·»åŠ  %s (instance_%s) åˆ°éšŠä¼" % [card_id, instance_id])
		else:
			print("âŒ éšŠä¼å·²æ»¿ï¼")

	# æ›´æ–°è¦–è¦ºæ•ˆæœï¼šæ ¹æ“šæ•¸é‡èª¿æ•´é€æ˜åº¦
	var new_count = temp_team_card_ids.count(instance_id)
	if new_count == 0:
		slot_node.modulate = Color(1.0, 1.0, 1.0)  # æ­£å¸¸
	elif new_count == 1:
		slot_node.modulate = Color(0.7, 0.7, 0.7)  # ç¨æš—
	else:
		slot_node.modulate = Color(0.4, 0.4, 0.4)  # å¾ˆæš—ï¼ˆå¤šå¼µï¼‰

	# åˆ·æ–°æ¨™é¡Œ
	modal_header_label.text = "ç·¨è¼¯éšŠä¼ %s (%d/%d)" % [
		current_editing_team_id.replace("team_", ""),
		temp_team_card_ids.size(),
		Constants.MAX_TEAM_SIZE
	]

func _on_modal_confirm_pressed():
	"""é»æ“Šæ‡¸æµ®èƒŒåŒ…çš„ã€Œç¢ºèªã€æŒ‰éˆ•"""
	print("å„²å­˜éšŠä¼: %s" % current_editing_team_id)
	
	if temp_team_card_ids.is_empty():
		# å¦‚æœæ˜¯ç©ºçš„ï¼Œè¦–åŒæ¸…ç©º
		_on_clear_requested(current_editing_team_id)
	else:
		# 1. å»ºç«‹ä¸€å€‹æ–°çš„ TeamData ç‰©ä»¶
		var new_team = TeamData.new()
		new_team.team_id = current_editing_team_id
		# TODO: ä¹‹å¾Œå¯ä»¥è®“ç©å®¶è‡ªè¨‚éšŠä¼åç¨±
		new_team.team_name = "æˆ‘çš„éšŠä¼ %s" % current_editing_team_id.replace("team_", "")
		
		# 2. ç¬¬ä¸€å¼µå¡ç‰‡è‡ªå‹•è¨­ç‚ºéšŠé•·
		new_team.leader_card_id = temp_team_card_ids[0]
		
		# 3. å‰©ä¸‹çš„å¡ç‰‡è¨­ç‚ºéšŠå“¡
		if temp_team_card_ids.size() > 1:
			new_team.member_card_ids = temp_team_card_ids.slice(1)
			
		# 4. å„²å­˜éšŠä¼
		PlayerDataManager.save_team(current_editing_team_id, new_team)
		PlayerDataManager.save_data()

	# 5. é—œé–‰è¦–çª—ä¸¦åˆ·æ–°
	card_selector_modal.hide()
	create_team_rows()
	
	# 6. æ¸…ç©ºæš«å­˜
	current_editing_team_id = ""
	temp_team_card_ids.clear()

func _on_modal_cancel_pressed():
	"""é»æ“Šæ‡¸æµ®èƒŒåŒ…çš„ã€Œå–æ¶ˆã€æŒ‰éˆ•"""
	card_selector_modal.hide()
	current_editing_team_id = ""
	temp_team_card_ids.clear()

# ==================== è¼¸å…¥è™•ç† ====================

func _input(event: InputEvent):
	"""è™•ç† ESC éµè¿”å›"""
	if event.is_action_pressed("ui_cancel"):  # ESC éµ
		if card_selector_modal and card_selector_modal.visible:
			# å¦‚æœå½ˆçª—æ‰“é–‹ï¼Œå…ˆé—œé–‰å½ˆçª—
			_on_modal_cancel_pressed()
		else:
			# æ­£å¸¸è¿”å›
			_on_back_pressed()

# ==================== å°èˆª ====================
func _on_back_pressed():
	if is_selection_mode:
	# å¾é¸æ“‡æ¨¡å¼è¿”å›é—œå¡é¸æ“‡
		GameManager.goto_stage_select()
	else:
	# å¾ç®¡ç†æ¨¡å¼è¿”å›ä¸»é¸å–®
		GameManager.goto_main_menu()
